feat(rpc): add devnet v1 transaction test fixture and validator checks
Include a captured devnet block response with v1 transaction in `getBlock` tests to ensure compatibility with third-party encoded messages.
- Adds a new `getBlock-v1-devnet-4.3.0-beta.3.json` snapshot.
- Verifies transaction integrity, compatibility with public v1 encodings, and interaction with `TransactionConfigMask`.
- Ensures consistent read behavior for legacy, v0, and v1 transactions across test cases.

Validation: `sava-rpc` tests pass, verifying byte-perfect round-trip accuracy for the new fixture.